# hybridoma

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-readme.yml  publish-svelte.yml  publish.yml
examples/: todos.db
examples/calculator/: app.py
examples/calculator/templates/: index.html
examples/chatapp/: app.py
examples/chatapp/templates/: chat_window.html  index.html
examples/todolist/: app.py
examples/todolist/templates/: index.html  todo_list.html
hybridoma/: __init__.py  hybridoma.proto  hybridoma.py  pyproject.toml  quart.py
hybridoma-svelte/: package-lock.json  package.json
hybridoma-svelte/src/: index.d.ts  index.js
hybridoma/static/: hybridoma.js.txt
