[project]
name = "hybridoma"
version = "0.3.0"
authors = [
  { name="uukelele", email="robustrobot11@gmail.com" },
]
description = "Write Python, get a reactive frontend - no JS framework required"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = ["Quart>=0.20.0", "flask-sqlalchemy", "minify-html", "quart-flask-patch", "markupsafe"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
hybridoma = ["static/*.css", "static/*.js", "static/*.txt"]